# docx_builder

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEV_INFRASTRUCTURE.md  README.md  plan.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: documenter.md  planner.md  reviewer.md  schema-author.md
.claude/commands/: implement.md  plan.md  review.md  wrapup.md
.claude/skills/schema-system/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  schema-request.md
.github/workflows/: validate.yml
dev/: harness.py  local_runner.py  mock_book.py  sample_data.py
docs/: BOOTSTRAP_PROMPT.md  CONTRIBUTING.md  DECISIONS.md  DEVLOG.md  PLAN.md  SCHEMA_AUTHORING.md  SCN.md  USER_GUIDE.md
docs/change/: scn.py  scn_examples.md  scn_rules.md
engine/: __init__.py  config.py  data_exchange.py  doc_generator.py  excel_builder.py  excel_control.py  excel_plan.py  excel_writer.py  file_bridge.py  github_loader.py  llm_helpers.py  log.py  schema_loader.py  scn.py  template_registry.py  validation_ux.py
schemas/: registry.yaml  rfq_electric_utility.yaml
tests/: conftest.py  test_config.py  test_data_exchange.py  test_doc_generator.py  test_doc_helpers.py  test_edge_cases.py  test_excel_builder.py  test_file_bridge.py  test_github_loader.py  test_integration.py  test_local_runner.py  test_mock_book.py  test_runner.py  test_schema_loader.py  test_scn.py  test_validation_ux.py
workbook/: README.md  loader.py  runner.py  scripts.py
xlwings_lite/: requirements.txt
